[package]
name = "amxml"
version = "0.4.9"
authors = ["KOYAMA Hiro <tac@amris.co.jp>"]
description = "XML processor with some features of XPath 2.0"
repository = "https://github.com/tac-am/amxml"
readme = "README.md"
keywords = ["XML", "XPath", "XPath2", "DOM", "SAX"]
license = "MIT OR Apache-2.0"

[dependencies]
